# CS_4sem

./: .gitignore  CMakeLists.txt  Makefile  README.md  bit_array.c  bit_array.h  test.c  test.h
bitset/include/: bit_array.h
bitset/src/: bit_array.c
bitset/tests/: test.c  test.h
prob_1/: CMakeLists.txt  Makefile  main.c  main.d  main.gcno
prob_1/bitset/include/: bit_array.h
prob_1/bitset/src/: bit_array.c  bit_array.d  bit_array.gcno
prob_1/bitset/tests/: test.c  test.d  test.gcno  test.h
prob_2/: CPUTopology.c  main.c
prob_3/: CMakeLists.txt  Makefile
prob_3/clc_core/: CMakeLists.txt  CPUTopology.h  calc.c  calc.h  info.h
prob_3/client/: CMakeLists.txt  client_main.c
prob_3/client/TCP/: CMakeLists.txt  client_main.c
prob_3/client/core/: CMakeLists.txt
prob_3/server/: CMakeLists.txt  server_main.c
prob_3/server/TCP/: CMakeLists.txt  server_main.c
prob_3/server/core/: CMakeLists.txt
prob_3/srl_core/: CMakeLists.txt  calc_proto_ser.c  calc_proto_ser.h
